tests/integration/snapshots/build/build_cmd_diagnostics_tests/build_reports_dependency_failure_for_parent_when_generated_dependency_file_is_missing.stderr.txt
Error: In child:

[ROOT]/contracts/child[LINE]: error: expected <expression>, got `;`
   2 |     val childValue = ;
     |                      ^

In parent:

[ROOT]/contracts/parent[LINE]: error: Failed to import: [NOT_FOUND]
   1 | import "../gen/child_code.tolk"
     |        ^^^^^^^^^^^^^^^^^^^^^^^^

Build failed with 2 errors
